--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -3,7 +3,7 @@
   font-size: 1.3rem;
   font-family: "Mulish", sans-serif;
   color: #042521;
-  padding: 4em 0;
+  padding: 4em 0 2em 0;
   p {
     color: #042521;
     opacity: 0.5;
