--- a/css/main.css
+++ b/css/main.css
@@ -650,7 +650,7 @@ body {
   font-size: 1.3rem;
   font-family: "Mulish", sans-serif;
   color: #042521;
-  padding: 4em 0;
+  padding: 4em 0 2em 0;
 }
 
 .footer p {
